[package]
name = "ps-ecc"
version = "0.1.0-8"
edition = "2021"
description = "Generates Reed-Solomon error correction codes."
license = "GPL-3.0-or-later"

[dependencies]
crc32fast = "1.5.0"
ps-buffer = "0.1.0-21"
thiserror = "2.0.17"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
