[package]
name = "ps-ecc"
version = "0.1.0-8"
edition = "2021"
description = "Generates Reed-Solomon error correction codes."
license = "GPL-3.0-or-later"

[dependencies]
ps-buffer = "0.1.0-22"
ps-util = "0.1.0-9"
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.16", features = ["xxh64"] }

[lints]
clippy.expect_used = "deny"
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.unwrap_used = "deny"
rust.unsafe_code = "deny"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
